- Fixed several problems with footnote layout
- Fixed crash when we delete style that is also used as a 'following style'.
- Fixed crash with bookmarks
- Fixed several memory leaks
- Fixed crash when we canceled create time/date variable.

Changes between KWord-1.2-RC1 and KWord-1.2
===========================================
Bugfixes:
- Fix update ruler tabs when we switch between text object
- Fix move up/down table/frame style
- Fix restore shortcut when we remove/add/rename style
- Fix restore shortcut when we remove/move/add/rename frame/table style
- Fix update resize handle when we change cell border
- Fix update resize handle when we change frame/table style.

KoText library fixes:
- Fix move up/down style
- Fix crash when we create a new style and delete this style.

Layout:
- Fixed layout of paragraph numbering in Right-To-Left mode.
- First line indent is now from the right in Right-To-Left mode.

Crashes:
- Fixed crash when removing pages (and the page number is shown in header/footer)

Changes after KWord-1.2
=======================
- Spellchecker can spell check only a selection
- Shadow is a character property
- Paragraph numbering: simple lists are not restarted by simple text in between
- Paragraph numbering: new option "restart numbering at this paragraph"
- Paragraph numbering: setting a depth doesn't imply "chapter numbering" anymore
- Add "copy link"
- Add "Add to bookmark"
- Now we can change "picture path" / "personal expression path"
- Add "Remove link"
- Add font properties : change relative font size when we sub/super script font
- Add support to add offset from baseline
- Now koinsertlink use "Recent document".
- Add support to insert directly cursor
- Add support for "word by word" format attribute.
- Add new variable : Next page number, previous page number
- Add time/date variable offset
- Fix #24242 add variable : created/modified/printed document date
- Now we can copy text of comment.
- Add support for convert table to text