@@ -505,7 +505,7 @@ don't put a </?xml...> at the end of the file!).
         When FORMAT is used to specify the format of a style, pos and len are omitted.
 -->
 <!ELEMENT FORMAT
-    (COLOR|FONT|SIZE|WEIGHT|ITALIC|UNDERLINE|STRIKEOUT|VERTALIGN|SHADOWTEXT|WORDBYWORD|ANCHOR|IMAGE|PICTURE|VARIABLE|TEXTBACKGROUNDCOLOR|OFFSETFROMBASELINE)*>
+    (COLOR|FONT|SIZE|WEIGHT|ITALIC|UNDERLINE|STRIKEOUT|VERTALIGN|SHADOWTEXT|WORDBYWORD|FONTATTRIBUTE|ANCHOR|IMAGE|PICTURE|VARIABLE|TEXTBACKGROUNDCOLOR|OFFSETFROMBASELINE)*>
 
 
 <!ATTLIST FORMAT
@@ -701,6 +701,14 @@ don't put a </?xml...> at the end of the file!).
 <!ELEMENT WORDBYWORD
     EMPTY>
 <!ATTLIST WORDBYWORD
+    value CDATA #REQUIRED>
+
+<!-- FONTATTRIBUTE
+        Value is either 0 none , 1 uppercase , 2 lowercase
+-->
+<!ELEMENT FONTATTRIBUTE
+    EMPTY>
+<!ATTLIST FONTATTRIBUTE
     value CDATA #REQUIRED>
 
 
